# TesteEmerge3

./: .gitignore  .replit  App.css  App.tsx  Pasted--DOCTYPE-html-html-lang-pt-BR-head-meta-charset-UTF-8-meta-name-viewport-cont-1734049787462.txt  Pasted--DOCTYPE-html-html-lang-pt-BR-head-meta-charset-UTF-8-style-body-font-family-Arial--1734154127294.txt  Pasted--tbody-tr-td-trio-Esquerdo-td-td-input-type-number-id-atrio-class--1734051157498.txt  Pasted-function-gerarPDF-const-jsPDF-window-jspdf-const-doc-new-jsPDF-orient-1734051061291.txt  Pasted-function-gerarPDF-const-jsPDF-window-jspdf-const-doc-new-jsPDF-orient-1734053706324.txt  Pasted-function-gerarPDF-const-jsPDF-window-jspdf-const-doc-new-jsPDF-orient-1734054197455.txt  Pasted-function-gerarPDF-const-jsPDF-window-jspdf-const-doc-new-jsPDF-orient-1734054653532.txt  Pasted-function-gerarPDF-const-jsPDF-window-jspdf-const-doc-new-jsPDF-orient-1734055489009.txt  Pasted-function-gerarPDF-const-jsPDF-window-jspdf-const-doc-new-jsPDF-orient-1734055774156.txt  Pasted-function-gerarPDF-const-jsPDF-window-jspdf-const-doc-new-jsPDF-orient-1734056528028.txt  Pasted-function-gerarPDF-const-jsPDF-window-jspdf-const-doc-new-jsPDF-orient-1734056930747.txt  Pasted-function-gerarPDF-const-jsPDF-window-jspdf-const-doc-new-jsPDF-orient-1734057561491.txt  Pasted-function-gerarPDF-const-jsPDF-window-jspdf-const-doc-new-jsPDF-orient-1734057998382.txt  Pasted-function-gerarPDF-const-jsPDF-window-jspdf-const-doc-new-jsPDF-orient-1734058354716.txt  assets.py  db_connection.py  gunicorn_config.py  main.py  models.py  pyproject.toml  (+3 more)
(+52 files in other folders)
