[project]
name = "repl-nix-new-repl"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "psycopg2-binary>=2.9.10",
    "flask-login>=0.6.3",
    "flask-cors>=5.0.0",
    "flask-wtf>=1.2.2",
    "flask-assets>=2.1.0",
    "webassets>=2.0",
    "cssmin>=0.2.0",
    "jsmin>=3.0.1",
    "python-docx>=1.0.0",
]
